ci: only create docker image

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -33,34 +33,34 @@ jobs:
             --push \
             .
 
-      # Deploy on provisioned EC2
-      - name: Deploy to EC2
-        uses: appleboy/ssh-action@v1.2.0
-        with:
-          host: ${{ secrets.EC2_IP }}
-          username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
-          script: |
-            cd ~/codespartans || mkdir ~/codespartans && cd ~/codespartans
+      # # Deploy on provisioned EC2
+      # - name: Deploy to EC2
+      #   uses: appleboy/ssh-action@v1.2.0
+      #   with:
+      #     host: ${{ secrets.EC2_IP }}
+      #     username: ${{ secrets.EC2_USER }}
+      #     key: ${{ secrets.EC2_SSH_KEY }}
+      #     script: |
+      #       cd ~/codespartans || mkdir ~/codespartans && cd ~/codespartans
 
-            # Cleanup old containers/images
-            docker stop $(docker ps -a -q)
-            docker rm $(docker ps -a -q)
-            docker rmi $(docker images -a -q)
-            # remove if you need data to persist
-            # docker system prune -af
-            # docker volume prune -f
+      #       # Cleanup old containers/images
+      #       docker stop $(docker ps -a -q)
+      #       docker rm $(docker ps -a -q)
+      #       docker rmi $(docker images -a -q)
+      #       # remove if you need data to persist
+      #       # docker system prune -af
+      #       # docker volume prune -f
 
-            # Write .env
-            echo "${{ secrets.ENV_FILE }}" > .env
+      #       # Write .env
+      #       echo "${{ secrets.ENV_FILE }}" > .env
 
-            # Download docker-compose.yml from GitHub
-            curl -L -o docker-compose.yml \
-              https://raw.githubusercontent.com/fkaaziebu/codespartans-backend/main/docker-compose.yml
+      #       # Download docker-compose.yml from GitHub
+      #       curl -L -o docker-compose.yml \
+      #         https://raw.githubusercontent.com/fkaaziebu/codespartans-backend/main/docker-compose.yml
 
-            # Verify the file
-            echo "Downloaded docker-compose.yml:"
-            cat docker-compose.yml
+      #       # Verify the file
+      #       echo "Downloaded docker-compose.yml:"
+      #       cat docker-compose.yml
 
-            # Start app
-            docker compose up -d --remove-orphans
+      #       # Start app
+      #       docker compose up -d --remove-orphans
